--- a/TODO
+++ b/TODO
@@ -40,3 +40,5 @@
 - Refactor where functions exist in .c.  Lots of primality tests in factor.c.
 
 - Rewrite 23-primality-proofs.t for new format (keep some of the old tests?).
+
+- Documentation update for new proof format
