--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 Revision history for Perl module Math::Prime::Util
 
-0.31  2013-08-06
+0.31  2013-08-07
 
     - Change proof certificate documentation to reflect the new text format.
 
@@ -8,6 +8,9 @@ Revision history for Perl module Math::Prime::Util
       x86_64 and Power64 use it now.
 
     - Small speedup for ranged totient internals.
+
+    - Patch MPU::GMP 0.13 giving us not quite what we expected from a small
+      certificate.  Fixed in MPU::GMP 0.14, worked around here regardless.
 
 0.30  2013-08-06
 
