--- a/Changes
+++ b/Changes
@@ -7,7 +7,8 @@ Revision history for Perl module Math::Prime::Util
       - is_proven_prime_with_cert
       - carmichael_lambda
 
-    - random_nbit_prime now uses Fouque and Tibouchi A1 and A2.
+    - random_nbit_prime now uses Fouque and Tibouchi A1.  Slightly better
+      uniformity and typically a bit faster.
 
 0.31  2013-08-07
 
