--- a/Changes
+++ b/Changes
@@ -18,7 +18,14 @@ Revision history for Perl module Math::Prime::Util
       Thanks to Kim Walisch for all discussions about this.
 
     - divisor_sum can take a '1' as the second argument as an alias for
-      sub {1}, but works much faster.
+      sub {1}, but works much faster.  (experimental, may change)
+
+    - Incorporate Montgomery reduction for primality testing, thanks to
+      Wojciech Izykowski.  This is a 1.3 to 1.5x speedup for is_prob_prime,
+      is_prime, and is_strong_pseudoprime for numbers > 2^32 on x86_64.
+      This also things like prime_iterator for values > 2^32.
+
+    - Primality functions moved to their own file primality.c.
 
 0.31  2013-08-07
 
