--- a/Changes
+++ b/Changes
@@ -18,8 +18,9 @@ Revision history for Perl module Math::Prime::Util
       should stay under ~150MB even with giant sizes.
       Thanks to Kim Walisch for all discussions about this.
 
-    - divisor_sum can take a '1' as the second argument as an alias for
-      sub {1}, but works much faster.  (experimental, may change)
+    - divisor_sum can take an integer 'k' in the second argument to compute
+      sigma_k.  This is much faster than using subs, especially when the
+      result can be computed in XS using native precision.
 
     - Incorporate Montgomery reduction for primality testing, thanks to
       Wojciech Izykowski.  This is a 1.3 to 1.5x speedup for is_prob_prime,
