--- a/Changes
+++ b/Changes
@@ -7,6 +7,10 @@ Revision history for Perl module Math::Prime::Util
       - is_proven_prime_with_cert
       - carmichael_lambda
       - znorder
+      - prime_iterator_object
+
+    - Added Math::Prime::Util::PrimeIterator.  A more feature-rich iterator
+      than the simple closure one from prime_iterator.  Experimental.
 
     - Input validation accepts bigint objects and converts them to scalars
       entirely in XS.
@@ -36,6 +40,8 @@ Revision history for Perl module Math::Prime::Util
       speedup for 33 to 64-bit inputs on x86_64/gcc platforms.
 
     - Primality functions moved to their own file primality.c.
+
+    - Some fixes around near maxint primes, forprimes, etc.
 
 0.31  2013-08-07
 
