--- a/Changes
+++ b/Changes
@@ -43,6 +43,9 @@ Revision history for Perl module Math::Prime::Util
 
     - Some fixes around near maxint primes, forprimes, etc.
 
+    - Bytes::Random::Secure is loaded only when random prime functionality
+      is used.  Shaves a few milliseconds and bytes off of startup.
+
 0.31  2013-08-07
 
     - Change proof certificate documentation to reflect the new text format.
@@ -126,7 +129,7 @@ Revision history for Perl module Math::Prime::Util
         $sum = 0;  forprimes { $sum += $_ } 1000,50000;  say $sum;
         forprimes { say if is_prime($_+2) } 10000;  # print twin primes
 
-    - my $it = prime_iterator(10000); say $it->(); 
+    - my $it = prime_iterator(10000); say $it->();
       This is experimental (that is, the interface may change).
 
 0.27  2013-05-20
@@ -456,7 +459,7 @@ Revision history for Perl module Math::Prime::Util
     [Minor Changes]
        - Make miller_rabin return 0 if given even number.
        - The XS miller_rabin code now works with large base > n.
-       - factor always returns sorted results 
+       - factor always returns sorted results
        - miller_rabin() deprecated.  Use is_strong_pseudoprime instead.
 
     [Support all functionality of:]
