--- a/TODO
+++ b/TODO
@@ -57,7 +57,4 @@
   algorithm).  The PP code isn't doing that, which means we're doing lots of
   extra primality checks, which aren't cheap in PP.
 
-- tests for factor_exp, liouville, partitions.
-
-- speedups for partitions()
-
+- tests for factor_exp, liouville.
