--- a/TODO
+++ b/TODO
@@ -56,3 +56,6 @@
   API (small factors, isprime, then call main code) and main code (just the
   algorithm).  The PP code isn't doing that, which means we're doing lots of
   extra primality checks, which aren't cheap in PP.
+
+- I believe we can make the Lehmer/LMO small primes uint32_t, which will
+  give some more memory reduction and a little speed.
